--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@solidjs/start": "^0.6.0",
-    "solid-js": "^1.8.15",
-    "vinxi": "^0.3.8"
+    "@solidjs/start": "^1.0.0-rc.0",
+    "solid-js": "^1.8.16",
+    "vinxi": "^0.3.10"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.3",
     "typescript-plugin-css-modules": "^5.1.0"
   },
   "engines": {
