--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
+  "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
+  "emmet.excludeLanguages": ["typescriptreact"],
   "editor.codeActionsOnSave": {
-    "source.fixAll": "explicit"
+    "source.fixAll.eslint": "explicit"
   },
-  "editor.formatOnSave": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "editor.linkedEditing": true
 }
