--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "solid-js": "^1.9.3",
-    "typegpu": "https://pkg.csb.dev/software-mansion/TypeGPU/commit/e62d915f/typegpu",
+    "typegpu": "0.3.2",
     "wgpu-matrix": "^3.3.0"
   },
   "devDependencies": {
@@ -22,6 +22,7 @@
     "typescript": "^5.7.2",
     "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^6.0.7",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-solid": "^2.11.0"
   }
 }
